--- a/LAB1/index.html
+++ b/LAB1/index.html
@@ -85,34 +85,34 @@
         <table cellspacing="5">
             <thread>
                 <tr>
-                    <td><img src="TOPGUN.jpeg" height="240" alt="poster of Top Gun: Maverick"></td>
-                    <td><img src="DUNE.png" height="240" alt="poster of DUNE"></td>
-                    <td><img src="Cruella.jpeg" height="240" alt="poster of Cruella"></td>
+                    <td><img src="TOPGUN.jpeg" height="240" width="170" alt="poster of Top Gun: Maverick"></td>
+                    <td><img src="DUNE.png" height="240" width="170" alt="poster of DUNE"></td>
+                    <td><img src="Cruella.jpeg" height="240" width="170" alt="poster of Cruella"></td>
                 </tr>
                 <tr>
-                    <th style="font-size: small;">탑건: 매버릭(2022)</th>
-                    <th style="font-size: small;">듄(2021)</th>
-                    <th style="font-size: small;">Cruella(2021)</th>
+                    <th width="170" style="font-size: small;">탑건: 매버릭<br>(2022)</th>
+                    <th width="170" style="font-size: small;">듄<br>(2021)</th>
+                    <th width="170" style="font-size: small;">Cruella<br>(2021)</th>
                 </tr>
                 <tr>
-                    <td><img src="Valerian.jpg" height="240" alt="poster of Valerian"></td>
-                    <td><img src="CU.jpeg" height="240" alt="poster of The Biri Gal, Flying Colors"></td>
-                    <td><img src="Kingsman.jpg" height="240" alt="poster of Kingsman"></td>
+                    <td><img src="Valerian.jpg" height="240" width="170" alt="poster of Valerian"></td>
+                    <td><img src="CU.jpeg" height="240" width="170" alt="poster of The Biri Gal, Flying Colors"></td>
+                    <td><img src="Kingsman.jpg" height="240" width="170" alt="poster of Kingsman"></td>
                 </tr>
                 <tr>
-                    <th style="font-size: small;">발레리안: 천 개 행성의 도시(2017)</th>
-                    <th style="font-size: small;">불량소녀, 너를 응원해!(2016)</th>
-                    <th style="font-size: small;">킹스맨(2015)</th>
+                    <th style="font-size: small;">발레리안: 천 개 행성의 도시<br>(2017)</th>
+                    <th style="font-size: small;">불량소녀, 너를 응원해!<br>(2016)</th>
+                    <th style="font-size: small;">킹스맨<br>(2015)</th>
                 </tr>
                 <tr>
-                    <td><img src="TDWP.jpg" height="240" alt="poster of The Devil Wears Prada"></td>
-                    <td><img src="CAC.jpg" height="240" alt="poster of charlie and the chocolate factory"></td>
-                    <td><img src="NM.jpeg" height="240" alt="poster of Nanny McPhee"></td>
+                    <td><img src="TDWP.jpg" height="240" width="170" alt="poster of The Devil Wears Prada"></td>
+                    <td><img src="CAC.jpg" height="240" width="170" alt="poster of charlie and the chocolate factory"></td>
+                    <td><img src="NM.jpeg" height="240" width="170" alt="poster of Nanny McPhee"></td>
                 </tr>
                 <tr>
-                    <th style="font-size: small;">악마는 프라다를 입는다(2006)</th>
-                    <th style="font-size: small;">찰리와 초콜릿 공장(2005)</th>
-                    <th style="font-size: small;">내니맥피: 우리 유모는 마법사(2005)</th>
+                    <th style="font-size: small;">악마는 프라다를 입는다<br>(2006)</th>
+                    <th style="font-size: small;">찰리와 초콜릿 공장<br>(2005)</th>
+                    <th style="font-size: small;">내니맥피: 우리 유모는 마법사<br>(2005)</th>
                 </tr>
             </thread>
         </table>
