--- a/LAB4/index.html
+++ b/LAB4/index.html
@@ -68,6 +68,14 @@
                     <img src="과학01.jpg" height="200px" alt="sring sunflowerp">
                     <p class="appear">why fish don't exist<br><b5>Lulu Miller<br>17000원</b5></p>
                 </div>
+                <div class="item">
+                    <img src="소설02.jpg" height="200px" alt="하얼빈">
+                    <p class="appear">하얼빈<br><b5>김호연<br>14000원</b5></p>
+                </div>
+                <div class="item">
+                    <img src="에세이02.jpg" height="200px" alt="나는 당신이 행복했으면 좋겠습니다">
+                    <p class="appear">나는 당신이<br> 행복했으면<br> 좋겠습니다<br><b5>박찬위<br>13800원</b5></p>
+                </div>
             </div>
         </div>
         
