--- a/LAB1/index.html
+++ b/LAB1/index.html
@@ -59,11 +59,11 @@
                     </tr>
                     <tr>
                         <th>좋아하는 음식</th>
-                        <td colspan="3">&nbsp;떡볶이, 달걀말이, 로제파스타, 연어초밥, 김치전</td>
+                        <td colspan="3">&nbsp;떡볶이, 마라샹궈, 광어초밥, 전</td>
                     </tr>
                     <tr>
                         <th>취미</th>
-                        <td colspan="3">&nbsp;영화관 가기, 피아노 치기, TRPG</td>
+                        <td colspan="3">&nbsp;영화관 가기, 피아노 치기, 산책</td>
                     </tr>
                 </tr>
             </thead>
